# shadcn-admin

./: .env.example.root  .gitignore  CLEANUP_SUMMARY.md  CONVERSATION_SUMMARY.md  MIGRATION_SUMMARY.md  Makefile  PROJECT_CONTEXT.md  QUICK_REFERENCE.md  README.md  STATUS.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.genie/code/agents/: tracer.md
.genie/code/teams/tech-council/: council.md  jt.md  nayr.md  oettam.md
.genie/spells/: routing-decision-matrix.md  upgrade-genie.md
.genie/state/: version.json
apps/agents/: .env.example  .gitignore  README.md  pyproject.toml
apps/agents/src/agents/: __init__.py
apps/ui/: .gitignore  README.md  package.json
