[tool.poetry]
name = "agents"
version = "0.1.0"
description = "AGNO-powered agent API"
authors = ["Your Team <team@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Will be installed later:
# agno = {extras = ["postgres"], version = "^1.1.6"}
# fastapi = "^0.115.0"
# uvicorn = {extras = ["standard"], version = "^0.34.0"}
# sqlalchemy = "^2.0.36"
# psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
# pytest = "^8.3.0"
# ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
